--- a/src/renderer/i18n/locales/en/onboarding.json
+++ b/src/renderer/i18n/locales/en/onboarding.json
@@ -22,5 +22,27 @@
     "back": "Back",
     "next": "Next",
     "finish": "Get Started"
+  },
+  "tour": {
+    "welcome": {
+      "title": "Welcome to Electron App Template",
+      "content": "This guided tour will walk you through the key features of this application."
+    },
+    "navigation": {
+      "title": "Navigation",
+      "content": "Use the sidebar to navigate between different sections like Dashboard, Settings, and Demos."
+    },
+    "command_palette": {
+      "title": "Command Palette",
+      "content": "Press Cmd+K (or Ctrl+K) to access the Command Palette for quick actions."
+    },
+    "settings": {
+      "title": "Settings",
+      "content": "Configure application preferences, themes, and shortcuts here."
+    },
+    "finish": {
+      "title": "You are all set!",
+      "content": "Enjoy using the app. You can restart this tour anytime from the Help menu."
+    }
   }
 }
