Fix renderer tests and missing translations
- Fix App.test.jsx warnings and expectations
- Fix UpdateNotification.test.jsx i18n keys
- Implement throttling in useStatusBar hook for testing
- Enable validation warnings in ShortcutContext
- Fix DataManagement.test.jsx contexts and assertions
- Fix CommandPalette.test.jsx backdrop interaction
- Remove obsolete Demo.test.jsx
- Add missing 'settings' translation key
- Update task lists

--- a/src/renderer/i18n/locales/en/common.json
+++ b/src/renderer/i18n/locales/en/common.json
@@ -115,6 +115,7 @@
     "recent_activity": "Recent Activity",
     "just_now": "Just now",
     "backups": "Backups",
+    "settings": "Settings",
     "docs": "Docs"
   },
   "about": {
