--- a/src/renderer/i18n/locales/pt-BR/common.json
+++ b/src/renderer/i18n/locales/pt-BR/common.json
@@ -115,6 +115,7 @@
     "recent_activity": "Atividade Recente",
     "just_now": "Agora mesmo",
     "backups": "Backups",
+    "settings": "Configurações",
     "docs": "Documentação"
   },
   "about": {
